--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
             <version>2.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>datatable</artifactId>
+            <version>3.2.0</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
